juno/qa/apps/opensearch-workers/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-workers
  annotations:
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "1"
    nginx.ingress.kubernetes.io/proxy-ssl-name: "workers.search.qa.juno.cqdg.ferlab.bio"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: "cqdg-qa/opensearch-ca-certificate"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
        - search-workers.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: search-workers.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-workers
                port:
                  number: 9200
